--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -539,6 +539,13 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
+                                            <div><b class="instructionListHeader">QNAP X64 - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap_{version}_x86_64.qpkg" href="emby-server-qnap_{version}_x86_64.qpkg">{filename}</a></li>
+                                                <li>Start Emby from the QNAP web interface</li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
                                             <div><b class="instructionListHeader">QNAP ARM / X86</b></div>
                                             <div>Install Emby Server for QNAP by downloading from the <a target="_blank" href="https://forum.qnap.com/viewtopic.php?f=320&t=109476">QNAP Community.</a>.</div>
                                             <div>
