--- a/src/freebsd-server.html
+++ b/src/freebsd-server.html
@@ -455,7 +455,7 @@
                                 <div><code>sudo pkg install mono libass fontconfig freetype2 fribidi gnutls iconv opus samba48 sqlite3 libtheora libva libvorbis webp libx264 libzvbi</code></div>
                                 <br />
                                 <div><b>Install Emby Server:</b></div>
-                                <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-rpm_{version}_x86_64.rpm">pkg add {url}</code></div>
+                                <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-freebsd_{version}_amd64.txz">pkg add {url}</code></div>
 
                                 <br />
                                 <div><b>Run Emby Server:</b></div>
@@ -471,7 +471,7 @@
                                 <div><code>sudo pkg install mono libass fontconfig freetype2 fribidi gnutls iconv opus samba48 sqlite3 libtheora libva libvorbis webp libx264 libzvbi</code></div>
                                 <br />
                                 <div><b>Install Emby Server:</b></div>
-                                <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-rpm_{version}_x86_64.rpm">pkg add {url}</code></div>
+                                <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd_{version}_amd64.txz">pkg add {url}</code></div>
 
                                 <br />
                                 <div><b>Run Emby Server:</b></div>
