--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -546,7 +546,28 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">QNAP ARM / X86</b></div>
+                                            <div><b class="instructionListHeader">QNAP ARM X41 - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap-mono_{version}_arm-x41.qpkg" href="emby-server-qnap-mono_{version}_arm-x41.qpkg">{filename}</a></li>
+                                                <li>Start Emby from the QNAP web interface</li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">QNAP ARM X31- BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap-mono_{version}_arm-x31.qpkg" href="emby-server-qnap-mono_{version}_arm-x31.qpkg">{filename}</a></li>
+                                                <li>Start Emby from the QNAP web interface</li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">QNAP ARM X19 - BETA</b></div>
+                                            <ol class="instructionList">
+                                                <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap-mono_{version}_arm-x19.qpkg" href="emby-server-qnap-mono_{version}_arm-x19.qpkg">{filename}</a></li>
+                                                <li>Start Emby from the QNAP web interface</li>
+                                                <li>Open a web browser to http://localhost:8096</li>
+                                            </ol>
+
+                                            <div><b class="instructionListHeader">QNAP X86</b></div>
                                             <div>Install Emby Server for QNAP by downloading from the <a target="_blank" href="https://forum.qnap.com/viewtopic.php?f=320&t=109476">QNAP Community.</a>.</div>
                                             <div>
                                                 <strong>Run Setup Wizard</strong>
