--- a/src/premiere.html
+++ b/src/premiere.html
@@ -593,7 +593,7 @@
                                                 <img class="img-icon" alt="" src="resources/mobilesync.png">
                                             </div>
                                         </div>
-                                    </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Offline Media</h3></div> <!-- header --><div class="aio-icon-description" style="">Download your media to your smart phones and tablets for easy offline playback. Supported on Android and Windows. Coming soon to iOS.</div> <!-- description -->
+                                    </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Offline Media</h3></div> <!-- header --><div class="aio-icon-description" style="">Download your media to your smart phones and tablets for easy offline playback. Supported on Android, iOS and Windows.</div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
                         </div>
@@ -714,9 +714,9 @@
                                         </div>
                                     </div>
                                     <div class="aio-icon-header">
-                                        <h3 class="aio-icon-title" style="">Automatically Convert Recordings</h3>
+                                        <h3 class="aio-icon-title" style="">Automatically Convert Content</h3>
                                     </div> <!-- header -->
-                                    <div class="aio-icon-description" style="">Convert your recordings into streaming friendly formats on the fly, during the recording process.</div> <!-- description -->
+                                    <div class="aio-icon-description" style="">Convert your content into streaming friendly formats on a schedule or when they are added.</div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
                         </div>
@@ -785,9 +785,9 @@
                                         </div>
                                     </div>
                                     <div class="aio-icon-header">
-                                        <h3 class="aio-icon-title" style="">Amazon Alexa</h3>
+                                        <h3 class="aio-icon-title" style="">Smart Home</h3>
                                     </div> <!-- header -->
-                                    <div class="aio-icon-description" style="">Use your Amazon Echo device to control your Emby apps by voice!  Just say "Alexa, ask Emby to play the next episode of Game of Thrones" and sit back and enjoy.</div> <!-- description -->
+                                    <div class="aio-icon-description" style="">Use your Amazon Echo or Google Home device to control your Emby apps by voice!  Just say "Alexa (or Hey Google), ask Emby to play the next episode of Game of Thrones" and sit back and enjoy.</div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
                         </div>
