--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -548,6 +548,7 @@
 
                                             <div><b class="instructionListHeader">QNAP ARM X41 - BETA</b></div>
                                             <ol class="instructionList">
+                                                <li>Install QMono from <a href="https://www.qnapclub.eu/en/qpkg/193">QNAP Club</a>.</li>
                                                 <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap-mono_{version}_arm-x41.qpkg" href="emby-server-qnap-mono_{version}_arm-x41.qpkg">{filename}</a></li>
                                                 <li>Start Emby from the QNAP web interface</li>
                                                 <li>Open a web browser to http://localhost:8096</li>
@@ -555,6 +556,7 @@
 
                                             <div><b class="instructionListHeader">QNAP ARM X31- BETA</b></div>
                                             <ol class="instructionList">
+                                                <li>Install QMono from <a href="https://www.qnapclub.eu/en/qpkg/193">QNAP Club</a>.</li>
                                                 <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap-mono_{version}_arm-x31.qpkg" href="emby-server-qnap-mono_{version}_arm-x31.qpkg">{filename}</a></li>
                                                 <li>Start Emby from the QNAP web interface</li>
                                                 <li>Open a web browser to http://localhost:8096</li>
@@ -562,6 +564,7 @@
 
                                             <div><b class="instructionListHeader">QNAP ARM X19 - BETA</b></div>
                                             <ol class="instructionList">
+                                                <li>Install QMono from <a href="https://www.qnapclub.eu/en/qpkg/193">QNAP Club</a>.</li>
                                                 <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap-mono_{version}_arm-x19.qpkg" href="emby-server-qnap-mono_{version}_arm-x19.qpkg">{filename}</a></li>
                                                 <li>Start Emby from the QNAP web interface</li>
                                                 <li>Open a web browser to http://localhost:8096</li>
