--- a/src/premiere.html
+++ b/src/premiere.html
@@ -405,6 +405,7 @@
                     <div class="w-pagehead">
                         <h1>Emby Premiere</h1>
                         <p>Enjoy additional features to enhance your personal media experience.</p>
+                        <p style="font-weight: bold">Emby is NOT a media streaming service.  We provide no content.  We are a Personal Media Server platform.  <span style="color:red">You must have your own server installed and your own content (or Live TV tuner).</span> Please only purchase one of the items below if you have your own Emby Server already installed.</p>
                     </div>
                 </div>
             </div>
