--- a/src/nas-server.html
+++ b/src/nas-server.html
@@ -546,7 +546,7 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">QNAP ARM X41 - BETA</b></div>
+                                            <div><b class="instructionListHeader">QNAP ARM X41, X31+, X31P, X28, X35 - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li>Install QMono from <a href="https://www.qnapclub.eu/en/qpkg/193">QNAP Club</a>.</li>
                                                 <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap-mono_{version}_arm-x41.qpkg" href="emby-server-qnap-mono_{version}_arm-x41.qpkg">{filename}</a></li>
@@ -562,7 +562,7 @@
                                                 <li>Open a web browser to http://localhost:8096</li>
                                             </ol>
 
-                                            <div><b class="instructionListHeader">QNAP ARM X19 - BETA</b></div>
+                                            <div><b class="instructionListHeader">QNAP ARM X12, X19, X20, X21 - BETA</b></div>
                                             <ol class="instructionList">
                                                 <li>Install QMono from <a href="https://www.qnapclub.eu/en/qpkg/193">QNAP Club</a>.</li>
                                                 <li>Download and install <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap-mono_{version}_arm-x19.qpkg" href="emby-server-qnap-mono_{version}_arm-x19.qpkg">{filename}</a></li>
