Replace large licenses with email links

--- a/src/premiere-ext.html
+++ b/src/premiere-ext.html
@@ -428,6 +428,7 @@
                     <div class="w-pagehead">
                         <h1>Emby Premiere</h1>
                         <p>Extended Premiere Options</p>
+                        <p style="font-weight: bold">Emby is NOT a media streaming service.  We provide no content.  Emby is a Personal Media Server platform.  <span style="color:red">You must have your own server installed and your own content (or Live TV tuner).</span> Please only purchase one of the items below if you have your own Emby Server already installed.</p>
                     </div>
                 </div>
             </div>
@@ -549,23 +550,15 @@
                                     </div> <!-- header -->
                                     <div class="aio-icon-description" style="">
                                         <p>
-                                            $24.99/Each Month (recurring)<br>
+                                            Contact for Price<br>
                                         </p>
                                         <div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
                                                 <div class="textwidget">
                                                     <p>
-                                                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=CV9RHF7RMUDAN"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
+                                                        <a href="mailto:business@emby.media?subject=Interested in 100 Devices Monthly"><img src="resources/contact_us.png" alt="Contact Us"></a>
                                                     </p>
-                                                    <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
-                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 100 Monthly" data-amount="2499" data-locale="auto" data-zip-code="true">
-                                                            // <![CDATA[
-
-                                                            // ]]></script>
-                                                        <input name="feature" type="hidden" value="Premiere100Monthly" />
-                                                        <input name="origin" type="hidden" value="website" />
-                                                        <input name="amount" type="hidden" value="2499" />
-                                                    </form>
+                                                
                                                 </div>
                                             </div>
                                         </div>
@@ -588,23 +581,14 @@
                                     </div> <!-- header -->
                                     <div class="aio-icon-description" style="">
                                         <p>
-                                            $249.99/Each Year (recurring)<br>
+                                            Contact for Price<br>
                                         </p>
                                         <div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
                                                 <div class="textwidget">
                                                     <p>
-                                                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=QFY7LX6B48NMU"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
+                                                        <a href="mailto:business@emby.media?subject=Interested in 100 Devices Yearly"><img src="resources/contact_us.png" alt="Contact Us"></a>
                                                     </p>
-                                                    <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
-                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 100 Yearly" data-amount="24999" data-locale="auto" data-zip-code="true">
-                                                            // <![CDATA[
-
-                                                            // ]]></script>
-                                                        <input name="feature" type="hidden" value="Premiere100Yearly" />
-                                                        <input name="origin" type="hidden" value="website" />
-                                                        <input name="amount" type="hidden" value="24999" />
-                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
@@ -627,23 +611,14 @@
                                     </div> <!-- header -->
                                     <div class="aio-icon-description" style="">
                                         <p>
-                                            $219.99/Each Month (recurring)<br>
+                                            Contact for Price<br>
                                         </p>
                                         <div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
                                                 <div class="textwidget">
                                                     <p>
-                                                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=MBVUPKBZ2TF6J"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
+                                                        <a href="mailto:business@emby.media?subject=Interested in 1000 Devices Monthly"><img src="resources/contact_us.png" alt="Contact Us"></a>
                                                     </p>
-                                                    <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
-                                                        <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Premiere 1000 Monthly" data-amount="21999" data-locale="auto" data-zip-code="true">
-                                                            // <![CDATA[
-
-                                                            // ]]></script>
-                                                        <input name="feature" type="hidden" value="Premiere1000Monthly" />
-                                                        <input name="origin" type="hidden" value="website" />
-                                                        <input name="amount" type="hidden" value="21999" />
-                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
