--- a/src/freebsd-server.html
+++ b/src/freebsd-server.html
@@ -456,6 +456,8 @@
                                 <br />
                                 <div><b>Install Emby Server:</b></div>
                                 <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-freebsd_{version}_amd64.txz">pkg add -f {url}</code></div>
+                                <div style="margin:.5em 0;"><code style="white-space:nowrap;">sysrc emby_server_enable="YES"</code></div>
+                                <div style="margin:.5em 0;"><code style="white-space:nowrap;">service emby-server start</code></div>
 
                                 <br />
                                 <div><b>Run Emby Server:</b></div>
@@ -472,6 +474,8 @@
                                 <br />
                                 <div><b>Install Emby Server:</b></div>
                                 <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd_{version}_amd64.txz">pkg add -f {url}</code></div>
+                                <div style="margin:.5em 0;"><code style="white-space:nowrap;">sysrc emby_server_enable="YES"</code></div>
+                                <div style="margin:.5em 0;"><code style="white-space:nowrap;">service emby-server start</code></div>
 
                                 <br />
                                 <div><b>Run Emby Server:</b></div>
