--- a/src/download.html
+++ b/src/download.html
@@ -877,7 +877,7 @@
                                                 <div class="w-portfolio-item-image"><img width="600" height="600" src="resources/windows10.png" class="w-portfolio-item-image-first wp-post-image" alt="270">	</div>
                                                 <div class="w-portfolio-item-meta">
                                                     <div class="w-portfolio-item-meta-h">
-                                                        <h2 class="w-portfolio-item-title">Emby for Windows 8.1</h2>
+                                                        <h2 class="w-portfolio-item-title">Emby for Windows</h2>
                                                         <span class="w-portfolio-item-arrow"></span>
                                                         <span class="w-portfolio-item-text"></span>
                                                     </div>
