--- a/src/emby-for-appletv.html
+++ b/src/emby-for-appletv.html
@@ -4,7 +4,7 @@
 <head itemscope itemtype="http://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
-    <title>Emby for Android TV - Emby</title>
+    <title>Emby for Apple TV - Emby</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="media server for personal streaming movies tv music photos in mobile app or browser for all devices android iOS windows phone appletv androidtv smarttv and dlna">
