--- a/src/docker-server.html
+++ b/src/docker-server.html
@@ -417,11 +417,18 @@
                                             <a href="https://docs.docker.com/installation/#installation">https://docs.docker.com/installation/#installation</a>
                                         </p>
                                         <div>
-                                            <strong>Install Emby Server</strong>
+                                            <strong>Install Emby Server - X64</strong>
                                         </div>
                                         <p>
                                             Emby Docker instructions can be found on Docker Hub:
-                                            <br/><a href="https://hub.docker.com/r/emby/embyserver" target="_blank">https://hub.docker.com/r/emby/embyserver</a>
+                                            <br /><a href="https://hub.docker.com/r/emby/embyserver" target="_blank">https://hub.docker.com/r/emby/embyserver</a>
+                                        </p>
+                                        <div>
+                                            <strong>Install Emby Server - Armv7</strong>
+                                        </div>
+                                        <p>
+                                            Emby Docker instructions can be found on Docker Hub:
+                                            <br /><a href="https://hub.docker.com/r/emby/embyserver_arm32v7" target="_blank">https://hub.docker.com/r/emby/embyserver_arm32v7</a>
                                         </p>
                                     </div>
                                 </div>
