--- a/src/freebsd-server.html
+++ b/src/freebsd-server.html
@@ -452,7 +452,7 @@
                                 </div>
 
                                 <div><b>Install dependencies:</b></div>
-                                <div><code>sudo pkg install mono libass fontconfig freetype2 fribidi gnutls iconv opus samba48 sqlite3 libtheora libva libvorbis webp libx264 libzvbi</code></div>
+                                <div><code>sudo pkg install mono libass fontconfig freetype2 fribidi gnutls iconv opus samba48 sqlite3 libtheora libva libvorbis webp libx264 libzvbi libraw</code></div>
                                 <br />
                                 <div><b>Install Emby Server:</b></div>
                                 <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-freebsd_{version}_amd64.txz">pkg add -f {url}</code></div>
@@ -470,7 +470,7 @@
                                 </div>
 
                                 <div><b>Install dependencies:</b></div>
-                                <div><code>sudo pkg install mono libass fontconfig freetype2 fribidi gnutls iconv opus samba48 sqlite3 libtheora libva libvorbis webp libx264 libzvbi</code></div>
+                                <div><code>sudo pkg install mono libass fontconfig freetype2 fribidi gnutls iconv opus samba48 sqlite3 libtheora libva libvorbis webp libx264 libzvbi libraw</code></div>
                                 <br />
                                 <div><b>Install Emby Server:</b></div>
                                 <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd_{version}_amd64.txz">pkg add -f {url}</code></div>
